[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/Npc/questionDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/Fontes/font32.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/screen_controls/shadedDark/shadedDark36.png" type="Texture" id=3]
[ext_resource path="res://assets/screen_controls/shadedDark/shadedDark37.png" type="Texture" id=4]
[ext_resource path="res://assets/Npc/font16Dialog.fnt" type="BitmapFont" id=5]

[node name="questionDialog" type="Node"]

script/script = ExtResource( 1 )

[node name="layer2" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="box" type="Polygon2D" parent="layer2"]

transform/pos = Vector2( 2080, 224 )
transform/rot = -90.0
transform/scale = Vector2( 1.28, 2.09064 )
polygon = Vector2Array( -150, 760, -150, 980, 800, 980, 800, 760 )
uv = Vector2Array(  )
color = Color( 0.14801, 0.159836, 0.195313, 0.941176 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="questionText" type="RichTextLabel" parent="layer2/box"]

rect/scale = Vector2( 0.82, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -106.0
margin/top = 787.0
margin/right = 953.0
margin/bottom = 920.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="answerButton" type="TouchScreenButton" parent="layer2/box"]

process/pause_mode = 2
transform/pos = Vector2( -106.25, 863.104 )
transform/scale = Vector2( 0.7, 0.45 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="answerButton2" type="TouchScreenButton" parent="layer2/box"]

process/pause_mode = 2
transform/pos = Vector2( -106.25, 921.161 )
transform/scale = Vector2( 0.7, 0.45 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="answerText" type="RichTextLabel" parent="layer2/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = 870.0
margin/right = 669.0
margin/bottom = 899.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="answerText2" type="RichTextLabel" parent="layer2/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = 919.0
margin/right = 669.0
margin/bottom = 949.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[connection signal="pressed" from="layer2/box/answerButton" to="." method="_on_answerButton_pressed"]

[connection signal="pressed" from="layer2/box/answerButton2" to="." method="_on_answerButton2_pressed"]


